# simple-localized-counterfactuals

./: .gitmodules  README.md  index.html  pyproject.toml
css/: main.css  mobile.css
data/weights/: cub_dino_classifier.pt
notebooks/: demo.ipynb
src/simple_localized_counterfactuals/: __init__.py
src/slc/: __init__.py  constants.py  create_celebAHQ_data.py  utils.py
src/slc/cli/: compute_all_metrics.py  compute_cd.py  compute_cout.py  compute_diversity.py  compute_fid.py  compute_flip_rate.py  compute_fva.py  compute_mnac.py  compute_sfid.py  compute_sss.py  extract_imagenet_features.py  train_imagenet_sae.py
src/slc/datasets/: __init__.py  base.py  celebA.py  celebA_hq.py  cf_paired.py  cub.py  flowers.py  image_folder.py  imagenet.py  mnist.py  nabirds.py
src/slc/evaluation/: cd.py  cout.py  diversity.py  fid.py  fva.py  mnac.py  sim_siam_similarity.py
src/slc/experiments/: ablation.py  celeba.py  cheetah_cougar.py  cub.py  egyptian_persian.py  faithfulness.py  imagenet_paired.py  zebra_sorrel.py
src/slc/masks/: __init__.py  agi.py  base.py  blur_ig.py  deep_lift.py  gbp.py  gig.py  grad_cam.py  ig.py  inputxgradients.py  lag.py  lime.py  lrp.py  occlusion.py
src/slc/models/: __init__.py  autoencoder.py  base.py  celeba.py  celeba_hq.py  clip.py  cub_dino.py  cub_resnet.py  dino.py  evaluation.py  oracle_celeba_hq_metrics.py  oracle_celeba_metrics.py  resnet.py  sigclip.py  vit.py
src/slc/pipelines/: __init__.py  base_edit.py  latent_edit.py  pixel_edit.py  sae_latent_edit.py
src/slc/vis/: __init__.py  diff_image.py  display.py
(+2 files in other folders)
